# stubdoc

./: .gitignore  README.md  build.py  development_doc.md  pyproject.toml  setup.py
.github/workflows/: deploy_to_pypi.yml
samples/: sample.py
stubdoc/: __init__.py  cli.py  stubdoc.py
tests/: test_build.py  test_cli.py  test_stubdoc.py
