[tool.poetry]
name = "stubdoc"
version = "0.1.0"
description = ""
authors = ["simonritchie"]
license = "MIT LICENSE"

[tool.poetry.dependencies]
python = "3.8.5"
twine = "3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
