[tool.poetry]
name = "stubdoc"
version = "0.1.3"
description = ""
authors = ["simon-ritchie"]
license = "MIT LICENSE"

[tool.poetry.dependencies]
python = "3.8.5"
twine = "3.2.0"
pytest = "4.3.1"
pytest-cov = "2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
