[tool.poetry]
name = "stubdoc"
version = "0.1.10"
description = ""
authors = ["simon-ritchie"]
license = "MIT LICENSE"

[tool.poetry.dependencies]
python = "^3.9.14"
twine = "3.2.0"
pytest = "4.3.1"
pytest-cov = "2.7.1"
mypy = "0.790"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
